--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<html>
+  <title>
+    First Website
+  </title>
+
+  <body>
+    <h1>This is my frst Github Page</h1>
+  </body>
+
+  <style>
+    body { 
+        background-color:green;
+        color:#fff;
+        text-align:center;
+         }
+  </style>
+  
+</html>
