--- a/index.html
+++ b/index.html
@@ -1,7 +1,90 @@
 
 <html>
   <title>
-    First Website
+    First Website<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            margin: 0;
+            padding: 0;
+            font-size: 36px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer</p>
+    </header>
+    <div class="container">
+        <h2>Summary</h2>
+        <p>
+            Write a brief summary of your skills and experience here.
+        </p>
+
+        <h2>Education</h2>
+        <p><strong>University Name</strong> - Bachelor's Degree in Computer Science</p>
+        <p><em>Month Year - Month Year</em></p>
+
+        <h2>Experience</h2>
+        <p><strong>Job Title</strong> - Company Name</p>
+        <p><em>Month Year - Present</em></p>
+        <ul>
+            <li>Responsibility 1</li>
+            <li>Responsibility 2</li>
+        </ul>
+
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>GitHub</li>
+        </ul>
+    </div>
+</body>
+</html>
+
   </title>
 
   <body>
