--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Your Name - Resume</title>
     <style>
         /* ... (Your CSS styles here) ... */
+        /* Add the vibrant CSS styles here */
+        /* ... (Vibrant CSS styles here) ... */
     </style>
 </head>
 <body>
