--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Shayne Tibbo - Resume</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,8 +81,8 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
+        <h1>Shayne Tibbo</h1>
+        <p>Quality Designer</p>
     </header>
     <div class="container">
         <h2>Summary</h2>
