--- a/index.html
+++ b/index.html
@@ -4,53 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Resume</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
-        /* Add responsive CSS styles here */
-        @media (max-width: 768px) {
-            header {
-                padding: 20px;
-            }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
 
-            header h1 {
-                font-size: 28px;
-            }
+        header {
+            background-color: #007BFF;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
 
-            header p {
-                font-size: 16px;
-            }
+        header h1 {
+            font-size: 36px;
+        }
 
-            .container {
-                padding: 20px;
-            }
+        header p {
+            font-size: 18px;
+        }
 
-            h2 {
-                font-size: 20px;
-            }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+        }
 
-            p {
-                font-size: 14px;
-            }
+        h2 {
+            font-size: 24px;
+            color: #333;
+            margin-top: 20px;
+        }
 
-            ul.skills {
-                flex-direction: column;
-            }
+        p {
+            line-height: 1.6;
+        }
 
-            .projects {
-                padding: 10px;
-            }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
 
-            .project {
-                margin: 10px 0;
-            }
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+        }
 
-            .project h3 {
-                font-size: 18px;
-            }
+        .skills li {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 5px 10px;
+            margin: 5px;
+            border-radius: 3px;
+        }
 
-            .project p {
-                font-size: 14px;
-            }
+        button {
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -72,6 +97,12 @@
         <h2>Experience</h2>
         <p><strong>Job Title</strong> - Company Name</p>
         <p><em>Month Year - Present</em></p>
+        <ul>
+            <li>Responsibility 1</li>
+            <li>Responsibility 2</li>
+        </ul>
+
+        <h2>Skills</h2>
         <ul class="skills">
             <li>HTML5</li>
             <li>CSS3</li>
@@ -79,17 +110,33 @@
             <li>GitHub</li>
         </ul>
 
+        <!-- JavaScript Elements -->
         <h2>Projects</h2>
-        <div class="projects">
-            <div class="project">
-                <h3>Project 1</h3>
-                <p>Description of Project 1.</p>
-            </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>Description of Project 2.</p>
-            </div>
+        <button id="toggleProjects">Show Projects</button>
+        <div id="projects" style="display: none;">
+            <h3>Project 1</h3>
+            <p>Description of Project 1.</p>
+
+            <h3>Project 2</h3>
+            <p>Description of Project 2.</p>
         </div>
     </div>
+
+    <!-- JavaScript code -->
+    <script>
+        // JavaScript to toggle the visibility of the projects section
+        const toggleButton = document.getElementById("toggleProjects");
+        const projectsSection = document.getElementById("projects");
+
+        toggleButton.addEventListener("click", () => {
+            if (projectsSection.style.display === "none" || projectsSection.style.display === "") {
+                projectsSection.style.display = "block";
+                toggleButton.textContent = "Hide Projects";
+            } else {
+                projectsSection.style.display = "none";
+                toggleButton.textContent = "Show Projects";
+            }
+        });
+    </script>
 </body>
 </html>
